--- a/css/niuini.css
+++ b/css/niuini.css
@@ -172,3 +172,15 @@ body {
     text-transform: uppercase;
     cursor: pointer;
 }
+
+/* 鼠标图标 */
+body {
+cursor: url("./files/x1.cur"), auto;
+}
+a,
+[type="button"]:not(:disabled),
+[type="reset"]:not(:disabled),
+[type="submit"]:not(:disabled),
+button:not(:disabled){
+cursor: url("./files/x2.cur"), auto !important;
+}
