--- a/css/style.css
+++ b/css/style.css
@@ -441,5 +441,40 @@ iframe#viewer {
 	}
 }
 
+/* 鼠标图标 */
+body {
+cursor: url("./files/x1.cur"), auto;
+}
+a,
+[type="button"]:not(:disabled),
+[type="reset"]:not(:disabled),
+[type="submit"]:not(:disabled),
+button:not(:disabled),
+#panel #sections span:not(:disabled),
+#panel .itcheck:not(:disabled) {
+cursor: url("./files/x2.cur"), auto !important;
+}
+#panel #sections span {
+	cursor: pointer;
+}
+#header .logo {
+	height: calc( 3.6rem - 2 * .7rem );;
+	/* margin-right: .7rem; */
+	vertical-align: top;
+}
+.bgm button {
+	background: transparent;
+	border: 0;
+	border: 1px solid rgb(255, 255, 255);
+	border-radius: 4px;
+	color: #ffffff;
+	padding: 12px 18px;
+	text-transform: uppercase;
+	cursor: pointer;
+	position: absolute;
+	left: 48%;
+	top: 48%;
+}
+
 
 
